[REFACTOR] Refactor notification to be cleaner